retrieveUnpackaged/objects/Test_Step_Result__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Behavious__c</fullName>
        <label>Expected Behaviour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observation_Remarks__c</fullName>
        <label>Observation/Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Case_Execution__c</fullName>
        <label>Test Case Execution</label>
        <referenceTo>Test_Case_Execution__c</referenceTo>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Step Result</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>TR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Step Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>